# RuSh

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: aliases.rs  arrays.rs  builtins.rs  command.rs  config.rs  error.rs  lib.rs  main.rs  opt.rs  parse.rs  parser.rs  prompt.pest  prompt.rs  rush.pest  rush.rs  variables.rs
src/builtins/: mod.rs
src/config/: mod.rs
tests/: arrays.rs  opt.rs  prompt.rs  variables.rs
