[package]
name = "RuSh"
description = "RuSh aims to be a bash compatible shell (with more candies) written in rust."
license = "GPL3"
version = "0.0.0-alpha.0"
authors = [ "Laurent Wandrebeck <l.wandrebeck@quelquesmots.fr>",
            "Guillaume Gomez <guillaume1.gomez@gmail.com>" ]

[features]
nightly = []

[[bin]]
name = "rush"
path = "src/main.rs"
doc = true
test = true
bench = true

[dependencies]
rustyline= { git = 'https://github.com/gwenn/rustyline.git', branch='master' }
chrono="0.4"
libc="0.2"
rand="0.5"
term="0.5"
pest = { git = 'https://github.com/pest-parser/pest.git', branch='master' }
pest_derive = { git = 'https://github.com/pest-parser/pest.git', branch='master' }
seahash = "3.0"
structopt = "0.2"
structopt-derive = "0.2"

[package.metadata.release]
upload-doc = true
