[package]
name = "RuSh"
description = "RuSh aims to be a bash compatible shell (with more candies) written in rust."
license = "GPL3"
version = "0.0.0-alpha.0"
authors = [ "Laurent Wandrebeck <l.wandrebeck@quelquesmots.fr>",
            "Guillaume Gomez <guillaume1.gomez@gmail.com>" ]
edition = "2018"

[features]
nightly = []

[lib]
name = "rush"

[[bin]]
name = "rush"
path = "src/main.rs"
doc = true
test = true
bench = true

[dependencies]
rustyline="4.0"
chrono="0.4"
libc="0.2"
rand="0.6"
term="0.5"
pest="2.1"
pest_derive="2.1"
seahash="3.0"
structopt="0.2"
structopt-derive="0.2"

[package.metadata.release]
upload-doc = true

